Bug 130414 - Crash when setting window position via API (gtk3)
Summary: Crash when setting window position via API (gtk3)
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: LibreOffice (show other bugs)
Version:
(earliest affected)
7.0.0.0.alpha0+
Hardware: All All
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:7.0.0
Keywords:
Depends on:
Blocks:
 
Reported: 2020-02-04 07:47 UTC by Samuel Mehrbrodt
Modified: 2020-02-24 11:36 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
Backtrace (3.63 KB, text/plain)
2020-02-04 07:47 UTC, Samuel Mehrbrodt
Details
Wollmux conf (4.88 MB, application/zip)
2020-02-14 06:48 UTC, Samuel Mehrbrodt
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Samuel Mehrbrodt 2020-02-04 07:47:44 UTC
Created attachment 157630 [details]
Backtrace

1. Install WollMux: https://github.com/WollMux/WollMux/releases/download/RELEASE_18.1.8/WollMux.oxt
2. Open Writer
3. Execute the following macro:

dispatcher = createUnoService("com.sun.star.frame.DispatchHelper")
dim args1(0) as new com.sun.star.beans.PropertyValue
dispatcher.executeDispatch(ThisComponent.CurrentController.Frame, "wollmux:PALVerwalten", "", 0, args1())

4. Click "Neu" in the dialog "Persönliche Absenderliste"

-> LO crashes (with gtk3 only)
Comment 1 Caolán McNamara 2020-02-04 09:25:04 UTC
3 just gives me

"Leider ist ein Fehler aufgetreten. Die genaue Fehlerbeschreibung steht im Log. Bitte wenden Sie sich an ihren Administrator."
Comment 2 Julien Nabet 2020-02-07 21:55:24 UTC
On pc Debian x86-64 with master sources updated today + gtk3 rendering, I don't reproduce this and have the same error message as Caolán.
Comment 3 Xisco Faulí 2020-02-13 11:08:36 UTC
Hi Samuel,
I believe you get the crash with a local build? What happens if you reproduce it in a daily build? Still crashing ?
Comment 4 Samuel Mehrbrodt 2020-02-14 06:48:23 UTC
Created attachment 157850 [details]
Wollmux conf

(In reply to Caolán McNamara from comment #1)
> 3 just gives me
> 
> "Leider ist ein Fehler aufgetreten. Die genaue Fehlerbeschreibung steht im
> Log. Bitte wenden Sie sich an ihren Administrator."

Ah it seems WollMux only works when a configuration is present.
Here's what I have. Put the folder ".wollmux" into your home directory and try again :)
Comment 5 Caolán McNamara 2020-02-14 15:15:59 UTC
I can reproduce it now
Comment 6 Commit Notification 2020-02-14 19:58:42 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/ce16f1f32937ee881268abf91454900b0170c637

Resolves: tdf#130414 don't crash attempting gtk_fixed_move if parent changed

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2020-02-17 11:07:16 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/e05c7017a04a1c2a2ee4dc22ee53ae8d66847c32

Related: tdf#130414 implement queue_resize for ChildFrame

It will be available in 7.0.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 8 Xisco Faulí 2020-02-24 11:36:42 UTC
@Samuel, could you please verify the issue is fixed on your side? OTOH, does it need to be backported to previous branches ?