Resolves: tdf#130414 don't crash attempting gtk_fixed_move if parent changed

Change-Id: I5b51f1fb0eccbdb1b3ad14ff7b36077a0016a838
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/88738
Tested-by: Caolán McNamara <caolanm@redhat.com>
Reviewed-by: Caolán McNamara <caolanm@redhat.com>